Fix text align on chrome in budget section

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -693,6 +693,7 @@ span.color-block-small {
     width: 0.75em;
     height: 100%;
     margin-right: 5px;
+    vertical-align: middle;
 }
 
 .progress.budget {
